--- a/src/Components/Card/ProductItem.module.css
+++ b/src/Components/Card/ProductItem.module.css
@@ -1,11 +1,22 @@
 .card {
+  height: 42rem;
   display: flex;
   flex-direction: column;
-  width: 350px;
-  height: 450px;
+  width: 26rem;
+  padding: 1rem 1.5rem;
+  border-radius: 1rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 0.7rem 2.9rem 0px;
+  background-color: rgba(255, 255, 255);
+  overflow: hidden;
 }
 
+.card:hover {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 0.5rem 1.5rem;
+  cursor: pointer;
+}
 .card__visual {
+  height: 50%;
+  flex-basis: 60%;
 }
 
 .features {
@@ -39,25 +50,64 @@
 }
 
 .card__details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  flex-basis: 40%;
 }
 
 .title {
+  font-size: 1.9rem;
+  line-height: 1.6;
+  height: auto;
+  width: 100%;
+  margin-top: 1.5rem;
+  font-weight: 600;
+  min-height: 5rem;
 }
 
+.card__price {
+  margin: 1rem 2.5rem;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+
+.price__current {
+}
 .price {
+  margin-right: 1rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+  margin-right: 2rem;
 }
 
 .btn {
-    display: flex;
-    align-items: center;
-    background-color: rgba(50, 125, 211, 0.623);
-    color: #fff;
+  display: flex;
+  align-items: center;
+  background-color: rgba(5, 42, 83, 0.973);
+  color: #fff;
+  font-size: 1.5rem;
+  border: none;
+  color: white;
+  font-weight: 700;
+  letter-spacing: 0.2rem;
+  padding: 1rem;
+  box-shadow: 0 1rem 2rem rgba(black, 0.15);
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: all 0.3s;
+  justify-content: space-evenly;
+}
+
+.btn:hover {
+  background-color: #000;
 }
 
 .icon {
-    width: 25px;
+  width: 25px;
 }
 
 .btn__txt {
-    margin-left: 10px;
+  margin-left: 10px;
 }
