--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ html {
   font-size: 62.5%; 
   box-sizing: border-box;
 }
+
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
