--- a/src/Components/Card/ProductItem.module.css
+++ b/src/Components/Card/ProductItem.module.css
@@ -100,6 +100,11 @@
   justify-content: space-evenly;
 }
 
+.btn__viewcart{
+  width: 100%;
+  background-color: #000;
+}
+
 .btn:hover {
   background-color: #000;
 }
